--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@fancyapps/fancybox": "^3.0.48",
-    "bootstrap": "^5.0.0-alpha1",
+    "bootstrap": "^5.1.3",
     "browserify": "^14.4.0",
     "del": "^3.0.0",
     "font-awesome": "^4.7.0",
